chore: add more employee info
